SET(SRC_COMP_PBRTVOLUME
	${CMAKE_CURRENT_SOURCE_DIR}/App_comp_pbrtvolume.h
	${CMAKE_CURRENT_SOURCE_DIR}/App_comp_pbrtvolume.cpp
	
	${CMAKE_CURRENT_SOURCE_DIR}/COMP_PBRTVOLUME.h
	${CMAKE_CURRENT_SOURCE_DIR}/COMP_PBRTVOLUME.cpp
)

SET(SRC_COMPCL_PBRTVOLUME
	${SRC_COMP_PBRTVOLUME}
	
	${CMAKE_CURRENT_SOURCE_DIR}/COMPCL_PBRTVOLUME.h
	${CMAKE_CURRENT_SOURCE_DIR}/COMPCL_PBRTVOLUME.cpp
)

IF(CUDA_FOUND)
	FILE(GLOB_RECURSE CUFILES "*.cu")
	
	SET(SRC_COMPCU_PBRTVOLUME
		${SRC_COMP_PBRTVOLUME}
		
		${CMAKE_CURRENT_SOURCE_DIR}/COMPCU_PBRTVOLUME.h
		${CMAKE_CURRENT_SOURCE_DIR}/COMPCU_PBRTVOLUME.cpp
		
		${CUFILES}
	)
	
	#LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_20,code=sm_20)
	#LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_30,code=sm_30)
	#LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_32,code=sm_32)
	#LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_35,code=sm_35)
	#LIST(APPEND CUDA_NVCC_FLAGS -gencode arch=compute_50,code=sm_50)
	
	LIST(APPEND CUDA_NVCC_FLAGS "--use_fast_math")
	LIST(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v")

	IF(NOT ANDROID)
		#SET(CUDA_GENERATED_OUTPUT_DIR ${SOURCE_DIR}/bin)

		SET(COMPILE_TO_PTX  ON)
		CUDA_COMPILE_PTX(PTXFILES ${CUFILES})
	ENDIF()
ENDIF(CUDA_FOUND)

#ADD_SUBDIRECTORY( ./comp_gl )
ADD_SUBDIRECTORY( ./comp_cl )
ADD_SUBDIRECTORY( ./comp_cu )